--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css"/>
-    <title>Homepage</title>
+    <title>Contact us</title>
 </head>
 <body>
-<h1>🥐 Croissants</h1>
-<p>A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for its historical crescent shape. Croissants and other viennoiserie are made of a layered yeast-leavened dough
-
-</p>
+<h1>🥐 Contact us</h1> 
+<p>To contact croissant.com, please email us at <a href="hello@croissant.com" class="mail">hello@croissant.com</a> for more info</p>
 <div class="links">
 <div class="row">
 <a href="/" class="home">Homepage</a>
 <a href="/images/photos.html" class="photo">Photo</a>
-<a href="/contact.html">Contact</a>
+<a href="contact.html">Contact</a>
 </div>
 </div>
 </body>
