Updated the links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <title>Homepage</title>
 </head>
 <body>
@@ -13,9 +13,9 @@
 </p>
 <div class="links">
 <div class="row">
-<a href="/" class="home">Homepage</a>
-<a href="/images/photos.html" class="photo">Photo</a>
-<a href="/contact.html">Contact</a>
+<a href="index.html" class="home">Homepage</a>
+<a href="photos.html" class="photo">Photo</a>
+<a href="contact.html">Contact</a>
 </div>
 </div>
 </body>
