--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <title>Contact us</title>
 </head>
 <body>
@@ -11,8 +11,8 @@
 <p>To contact croissant.com, please email us at <a href="hello@croissant.com" class="mail">hello@croissant.com</a> for more info</p>
 <div class="links">
 <div class="row">
-<a href="/" class="home">Homepage</a>
-<a href="/images/photos.html" class="photo">Photo</a>
+<a href="index.html" class="home">Homepage</a>
+<a href="photos.html" class="photo">Photo</a>
 <a href="contact.html">Contact</a>
 </div>
 </div>
