--- a/photos.html
+++ b/photos.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <title>Photos</title>
 </head>
 <body>
 <h1>🥐 A picture of a croissant</h1>
-<img src="/images/img.jpg" class="picture"/>
+<img src="img.jpg" class="picture"/>
 <div class="links">
 <div class="row">
-<a href="/index.html" class="home">Homepage</a>
+<a href="index.html" class="home">Homepage</a>
 <a href="photos.html" class="photo">Photo</a>
-<a href="/contact.html">Contact</a>
+<a href="contact.html">Contact</a>
 </div>
 </div>
 </body>
